[SGH-111] Fixed carousel size. Fixed thumbnail container on small screens.

--- a/src/main/webapp/src/app/product/product-details/product-details.component.scss
+++ b/src/main/webapp/src/app/product/product-details/product-details.component.scss
@@ -58,6 +58,7 @@ $map-height: 500px;
 
 .product-details {
     padding-inline: $main-padding-inline;
+    transition: all 0.5s ease-out;
 
     .product-main-area {
         border-bottom: solid;
@@ -145,8 +146,8 @@ $map-height: 500px;
 
                 img {
                     width: 100%;
-                    height: 90%;
-                    object-fit: contain;
+                    height: 600px;
+                    object-fit: fill;
                     border-radius: $border-radius;
                     cursor: pointer;
                 }
@@ -161,25 +162,42 @@ $map-height: 500px;
                     flex-direction: column;
                     max-height: 600px;
                     overflow-y: auto;
-                    overflow-x: hidden;
                     opacity: 0.5;
                     margin-right: 5%;
-                    flex-shrink: 0;
 
                     @media(max-width: $breakpoint-large) {
-                        flex-direction: row;
-                        max-width: 600px;
-                        max-height: 100px;
-                        margin-right: 0;
-                        overflow-y: hidden;
-                        overflow-x: hidden;
-                        display: flex;
+                        flex-direction: column;
                     }
+
+                    @media(max-width: $breakpoint-small) {
+                        flex-direction: row;
+                        max-width: 100%;
+                        overflow-x: auto;
+                        overflow-y: hidden;
+                        max-height: none;
+                        white-space: nowrap;
+
+                        .thumbnail {
+                            display: inline-block;
+                            width: 100px;
+                            height: 100px;
+                            margin-bottom: 0;
+                            flex: 0 0 auto;
+                            margin-right: 5%;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                            }
+                        }
+                    }
+
 
                     .thumbnail {
                         width: 100px;
                         height: 100px;
-                        margin-bottom: 10px;
+                        margin-bottom: 5%;
 
                         img {
                             margin: 0;
@@ -243,13 +261,18 @@ $map-height: 500px;
                 .carousel-item {
                     flex: 0 0 auto;
                     scroll-snap-align: start;
-                    width: 500px;
+                    width: 800px;
                     height: 90%;
                     background-color: $color-neutral-1;
                     border: $border;
                     border-radius: $border-radius;
                     display: flex;
                     justify-content: center;
+
+                    @media (max-width: $breakpoint-large) {
+                        width: 100%;
+                        height: 400px;
+                    }
 
                     img {
                         max-width: 80%;
